<resources>
    <string name="app_name">AirlineApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_advanced_search">AdvancedSearch</string>
    <string name="title_activity_flights_list">FlightsList</string>
    <string name="title_activity_advanced">Advanced</string>
    <string name="title_activity_classes">Classes</string>
    <string name="title_activity_detalle_classes">DetalleClasses</string>
    <string name="title_activity_detalle_flight">DetalleFlight</string>
    <string name="title_activity_crear_cuenta">CrearCuenta</string>
    <string name="title_activity_update_account">UpdateAccount</string>
    <string name="title_activity_my_trips">MyTrips</string>

    <!-- Strings related to Search -->
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_Map">Map</string>
    <string name="label_departOn">Depart on</string>
    <string name="lable_return">Return</string>
    <string name="lable_nextStep">Continue</string>
    <string name="lable_step1">Step 1 : Choose place and date</string>
    <string name="lable_advancedSearch">Advanced search</string>
    <string name="title_activity_amount_passagers">AmountPassagers</string>

    <!-- Strings related to amount passagers -->
    <string name="label_amount_of_passagers">Step 2: Select the amount of passagers</string>
    <string name="label_adults">Adults</string>
    <string name="label_children">Children</string>
    <string name="label_select_class">Select the class</string>
    <string name="label_economy">Economy</string>
    <string name="label_business">Business</string>
    <string name="label_premium">Premium</string>
    <string name="label_see_all_clases_detail">See all class detail</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to flights list -->
    <string name="label_price">500</string>
    <string name="label_date_word">Date</string>
    <string name="label_date">10/7/2018</string>
    <string name="label_departure_time">Departure time</string>
    <string name="label_arival_time">Arrival time</string>
    <string name="label_hour">10:00</string>
    <string name="label_hour_arrival">13:00</string>
    <string name="label_plane">BOING-747</string>
    <string name="label_origin">San jose</string>
    <string name="label_destiny">Miami</string>
    <string name="label_Select">Select</string>


    <!-- Strings related to activity classes -->
    <string name="Classes_Economy_Class">Economy Class</string>
    <string name="Classes_Business_Class">Business Class</string>
    <string name="Classes_Premium_Class">Premium Class</string>

    <!-- Strings related to flight-confirmation -->
    <string name="label_flight_detail">Flight confirmation</string>
    <string name="label_date_confirmation">Date</string>
    <string name="label_departure_confirmation">Departure time</string>
    <string name="label_arrival_confirmation">Arrival time</string>
    <string name="label_duration_confirmation">Duration</string>
    <string name="label_class_confirmation">Class</string>
    <string name="label_price_one_person_confirmation">Price single person</string>
    <string name="label_taxes">Taxes</string>
    <string name="label_total_price_confirmation">Total price</string>
    <string name="label_Book">Book</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Strings related to custom_my_trips -->
    <string name="label_date_flight">Date</string>
    <string name="next_trips">Next Trips</string>
    <string name="travel_history">Travel History</string>
    <string name="label_kilometers">Kilometers</string>
    <string name="label_kilometers_num">9000</string>



</resources>

