<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AmountPassagers"
    tools:showIn="@layout/app_bar_amount_passagers">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:text="@string/label_amount_of_passagers" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:text="Adults" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker_adults"
                    android:layout_width="138dp"
                    android:layout_height="62dp"
                    android:layout_centerInParent="true"
                    app:np_dividerColor="@color/colorPrimary"
                    app:np_height="180dp"
                    app:np_max="59"
                    app:np_min="0"
                    app:np_selectedTextColor="@color/colorPrimary"
                    app:np_textColor="@color/colorPrimary"
                    app:np_value="3"
                    app:np_width="64dp">

                </com.shawnlin.numberpicker.NumberPicker>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_children" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker_children"
                    android:layout_width="137dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    app:np_dividerColor="@color/colorPrimary"
                    app:np_height="180dp"
                    app:np_max="59"
                    app:np_min="0"
                    app:np_selectedTextColor="@color/colorPrimary"
                    app:np_textColor="@color/colorPrimary"
                    app:np_value="3"
                    app:np_width="64dp">

                </com.shawnlin.numberpicker.NumberPicker>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_select_class" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="79dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_economy" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_business" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_premium" />
                    </LinearLayout>
                </RadioGroup>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/lable_nextStep" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>