<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#fff">


    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="153dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView_price"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="From"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_from"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:layout_width="288dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView_price"
                    android:layout_toEndOf="@+id/textView14"
                    android:layout_weight="1"
                    android:text="@string/label_origin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView16"
                    android:layout_below="@+id/textView_price"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="To"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_to"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView_from"
                    android:layout_below="@+id/textView_price"
                    android:layout_weight="1"
                    android:text="@string/label_destiny" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/textView16"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/label_departure_time"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_hour_departure"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/textView13"
                    android:layout_weight="1"
                    android:text="@string/label_hour" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/textView13"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/label_arival_time"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_hour_arrival"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView_hour_departure"
                    android:layout_alignTop="@+id/textView14"
                    android:layout_weight="1"
                    android:text="@string/label_hour_arrival" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_price"
                android:focusableInTouchMode="true"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/label_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>